@@ -54,24 +54,21 @@ setup (
             'z3c.baseregistry',
             'z3c.zrtresource',
             'zope.annotation',
-            'zope.app.broken',
-            'zope.app.component',
-            'zope.app.error',
-            'zope.app.keyreference',
-            'zope.app.i18n',
-            'zope.app.intid',
-            'zope.app.principalannotation',
-            'zope.app.schema',
-            'zope.app.securitypolicy',
-            'zope.app.server',
-            'zope.app.testing',
-            'zope.app.session',
-            'zope.app.zopeappgenerations',
+            'zope.app.wsgi',
+            'zope.broken',
+            'zope.component',
+            'zope.error',
+            'zope.intid',
+            'zope.keyreference',
+            'zope.principalregistry',
+            'zope.securitypolicy',
+            'zope.session',
             'zope.site',
             ],
         test = [
             'z3c.pt',
             'z3c.ptcompat',
+            'zope.app.testing',
             'zope.site',
             'zope.testbrowser',
             'zope.testing',
@@ -87,7 +84,6 @@ setup (
         'z3c.menu.ready2go',
         'z3c.pagelet',
         'z3c.template',
-        'zc.configuration',
         'zope.app.renderer',
         'zope.component',
         'zope.contentprovider',
